--- a/student-backend/src/main/resources/application.properties
+++ b/student-backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=student
+#server.port=8080
 
 # DataSource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/fullstack_student?useSSL=false&allowPublicKeyRetrieval=true
@@ -11,3 +12,8 @@ spring.datasource.password=1234567890
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
+
+#tắt spring security :v
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+
